2000-09-03  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-types.h:
	* libgnomevfs/gnome-vfs-xfer.c: (init_progress), (copy_directory),
	(copy_items), (move_items), (link_items):
	Add a flag to the xfer progress indicating a top-level item to 
	allow triggering metadata copies.

	* libgnomevfs-pthread/gnome-vfs-job.c:
	(execute_create_symbolic_link):
	* libgnomevfs/gnome-vfs-mime-info.c: (gnome_vfs_mime_set_value):
	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_new):
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(populate_viewer_menu):
	* modules/translate-method.c: (tr_uri_translate):
	* test/test-uri.c: (test_uri_host_port):
	Fix a bunch of uninitialized variables that Michael Meeks found.

2000-09-02  Mathieu Lacage  <mathieu@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_component),
	(gnome_vfs_mime_do_short_list_processing),
	(gnome_vfs_mime_get_short_list_components): fix small typo
	but evil bug.

2000-09-01  Mathieu Lacage  <mathieu@eazel.com>

	* mime-type-capplet/nautilus-mime-type-capplet.c: (main),
	(init_mime_capplet), (populate_mime_list),
	(create_mime_list_and_scroller):
	remove debugging output. fix many run-time warnings.
	Now, can go into fixing real bugs.

2000-09-01  Mathieu Lacage  <mathieu@eazel.com>

	* libgnomevfs/gnome-vfs-init.c: (gnome_vfs_init):
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_action_without_fallback),
	(gnome_vfs_mime_get_default_component), (join_str_list),
	(gnome_vfs_mime_get_short_list_components),
	(gnome_vfs_mime_get_all_components),
	(gnome_vfs_mime_id_in_component_list),
	(gnome_vfs_mime_id_list_from_component_list),
	(gnome_vfs_mime_remove_component_from_list),
	(gnome_vfs_mime_action_free), (gnome_vfs_mime_component_list_free),
	(OAF_ServerInfoList_to_ServerInfo_g_list):
	* libgnomevfs/gnome-vfs-mime-handlers.h:
	* test/test-mime-handlers-set.c: (main): 
	* test/test-mime-handlers.c: (print_component), (print_action),