@@ -1,3 +1,10 @@
+2000-09-03  Maciej Stachowiak  <mjs@eazel.com>
+
+	* libgnomevfs-pthread/gnome-vfs-job.c: (execute_set_file_info):
+	* modules/file-method.c: (find_trash_directory):
+
+	Added bug numbers to FIXMEs.
+	
 2000-09-03  Pavel Cisler  <pavel@eazel.com>
 
 	* libgnomevfs/gnome-vfs-types.h:
